@@ -235,6 +235,10 @@ namespace SphereSim
 		/** \copydoc SimulatedSystemActions::updateBoxSize
 		 * \param boxSize Requested box size. */
 		void updateBoxSize(Vector3 boxSize);
+		
+		/** \copydoc SimulatedSystemActions::updateKineticEnergy
+		 * \param factor Kinetic energy scale factor. */
+		void updateKineticEnergy(Scalar factor);
 	
 	public slots:
 		/** Set connectedFlag to true. 
