@@ -53,6 +53,11 @@ namespace SphereSim
 		/** \brief Clean up member variables. */
 		~MainWindow();
 		
+	public slots:
+		void increaseEnergy();
+		
+		void decreaseEnergy();
+		
 	};
 }
 
